- Added new challengers - Added docker-compose - Added README information