@@ -4,3 +4,7 @@ You can watch all new source code published at [@RafaDelNero](https://twitter.co
 
 ## Solutions
 Check the solutions from the Java Challengers code at [Java Challengers Videos](https://www.youtube.com/playlist?list=PL3py5YSIGvPMgKXOVqnYn9nBoT_zvsvsi)
+
+## Docker commands
+docker run --rm -v $(pwd):/app -w /app/src/main/java openjdk:13-slim java --enable-preview --source 13 function/FunctionalInterfaceChallenge.java
+docker-compose run --rm java-source crazysyntax/NameChallenge.java
